<resources>
    <string name="app_name">FigmaBueno</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Get_Started">Get Started</string>
    <string name="Register">Register</string>
    <string name="Confirmed">Confirmed</string>
    <string name="EMail">E-Mail</string>
    <string name="Password">Password</string>
    <string name="ConfirmarContraseña">Confirmar Contraseña</string>
    <string name="Name">Name</string>
    <string name="AlreadyHeaveAAcountSingIn">Already heave a acount? Sing in</string>
    <string name="EnterYourEmail">Enter your email</string>
    <string name="EnterYourPassword">Enter your password</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="AlreadyHeaveAAcount">Already heave a acount </string>
</resources>